--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
             <meta charset="UTF-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-            <title>Harry Potter</title>
+            <title>Harry Potter Characters</title>
             <link rel="shortcut icon" href="https://e7.pngegg.com/pngimages/576/813/png-clipart-hp-text-illustration-harry-potter-fandom-amazon-com-symbol-decal-harry-potter-angle-text-thumbnail.png" />
-            <link rel="stylesheet" href="app.css" />
+            <link rel="stylesheet" href="app.css"/>
+            <embed name="myMusic" loop="true" hidden="true" src="./music.mp3">
         </head>
         <body>
             <div class="container">
